starting to begin the slog of adding in circleci